--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: meteopisa
-Title: What the Package Does (One Line, Title Case)
+Title: Segunda Oportunidad del Paquete Meteorologico
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+    person("Ezequiel", "Piseri", , "ezequielpiseri@gmail.com", role = c("aut", "cre", "presi"))
+Description: Vuelvo a crear el paquete meteorologico con las correcciones para el final
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
