--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,25 @@
 Package: meteopisa
-Title: Segunda Oportunidad del Paquete Meteorologico
+Title: Funciones para Analisis de Datos Meteorologicos
 Version: 0.0.0.9000
 Authors@R: 
-    person("Ezequiel", "Piseri", , "ezequielpiseri@gmail.com", role = c("aut", "cre", "presi"))
-Description: Vuelvo a crear el paquete meteorologico con las correcciones para el final
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Ezequiel", "Piseri", email = "ezequielpiseri@gmail.com",
+           role = c("aut", "cre"))
+Description: Proporciona funciones para leer datos meteorologicos,
+    generar resúmenes estadisticos y producir graficos de temperatura
+    mensual para distintas estaciones. Incluye datasets internos
+    para ejemplos y pruebas.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
 URL: https://github.com/EzequielPiseri/meteopisa
 BugReports: https://github.com/EzequielPiseri/meteopisa/issues
+Depends: 
+    R (>= 3.5)
+Imports:
+    dplyr,
+    ggplot2,
+    readr,
+    tidyr,
+    cli,
+    lubridate
